tests/rascal/negative/name_errors/L1/7_dupl-id2.ob
MODULE Bla;

TYPE
  x = INTEGER;

VAR
  x: X;

BEGIN
  x := 1
END Bla.